@@ -4,6 +4,7 @@
 - Fix: [#22615] Crash when drawing Space Rings with an invalid ride entry.
 - Fix: [#22633] Crash when drawing loading screen with an outdated g2.dat.
 - Fix: [#22918] Zooming with keyboard moves the view off centre.
+- Fix: [#22920] Crash when sacking a staff member.
 - Fix: [#22921] Wooden RollerCoaster flat to steep railings appear in front of track in front of them.
 - Fix: [#22962] Fuzzy horizontal-to-vertical line transitions in charts.
 - Fix: [#23009] Scenarios from RCT Classic (.sea files) are not included in the scenario index.
